new updated contacts

--- a/Contact Details.html
+++ b/Contact Details.html
@@ -21,10 +21,10 @@
   <ul>
     <li><em><strong>Email Id's: ab2421jmd@gmail.com/abhiengg24@gmail.com/abhimaa07@gmail.com</strong></em></li>
     <br>
-    <li><em><strong>M.No.: 9667326760</strong></em></li>
+    <li><em><strong>M.No.: 94562587952</strong></em></li>
   </ul>
   <hr>
-  <form action="mailto:ab2421jmd@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:xyzdef@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="Your name" value=""><br><br>
     <label>Your Email:</label>
