new updated contacts 1.html

--- a/Contact Details.html
+++ b/Contact Details.html
@@ -19,7 +19,7 @@
 <body>
   <h1>My Contact Details</h1>
   <ul>
-    <li><em><strong>Email Id's: ab2421jmd@gmail.com/abhiengg24@gmail.com/abhimaa07@gmail.com</strong></em></li>
+    <li><em><strong>Email Id's: xyzdef@gmail.com</strong></em></li>
     <br>
     <li><em><strong>M.No.: 94562587952</strong></em></li>
   </ul>
